# paq

./: .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  demo.sh  demo.yaml  flake.nix  hyperfine.sh
.github/workflows/: build.yml  ci.yml  release.yml
benches/: comparison.sh  functional.rs  hash_by_file_size.rs  hash_list_hash.rs  hash_list_sort.rs  hash_using_jwalk.rs  hash_using_walkdir.rs  hyperfine.sh  regression.sh  utils.rs
docs/: benchmarks.md
example/: alpha.txt  bravo  charlie
example/.ignored/: delta.txt
example/subdir/: bravo.conf
infra/: ec2-benchmark-template.yaml
src/: bin.rs  lib.rs  main.rs
tests/: functional.rs  utils.rs
