[package]
name = "paq"
version = "1.1.1"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
edition = "2021"
description = "Hash file or directory recursively."
license = "MIT"
readme = "README.md"
keywords = [
  "hash",
  "blake3",
  "directories",
  "directory-traversal",
  "cryptographic",
]
repository = "https://github.com/gregl83/paq"
homepage = "https://crates.io/crates/paq"

[lib]
name = "paq"
path = "src/lib.rs"

[[bin]]
name = "paq"
path = "src/bin.rs"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
blake3 = "1.3.1"
clap = { version = "4.5.42", features = ["cargo", "unstable-styles"] }
rayon = "1.5"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.11"

[features]
default = ["test-cleanup"]
test-cleanup = []
