[package]
name = "paq"
version = "1.3.0"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
edition = "2021"
description = "Hash file or directory recursively."
license = "MIT"
readme = "README.md"
keywords = [
  "hash",
  "blake3",
  "directories",
  "directory-traversal",
  "cryptographic",
]
repository = "https://github.com/gregl83/paq"
homepage = "https://crates.io/crates/paq"

[lib]
name = "paq"
path = "src/lib.rs"

[[bin]]
name = "paq"
path = "src/bin.rs"

[profile.release]
lto = true
opt-level = 3
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
blake3 = "1.3.1"
clap = { version = "4.5.53", features = ["cargo", "unstable-styles"] }
memmap2 = "0.9.9"
rayon = "1.11"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.1.1"

[features]
default = ["test-cleanup"]
test-cleanup = []
