[package]
name = "paq"
version = "1.4.0"
authors = ["Gregory Langlais <_@gregorylanglais.com>"]
edition = "2021"
description = "Hash file or directory recursively."
license = "MIT"
readme = "README.md"
keywords = [
  "hash",
  "blake3",
  "directories",
  "directory-traversal",
  "cryptographic",
]
repository = "https://github.com/gregl83/paq"
homepage = "https://crates.io/crates/paq"

[lib]
name = "paq"
path = "src/lib.rs"

[[bin]]
name = "paq"
path = "src/bin.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "hash_by_file_size"
harness = false

[[bench]]
name = "hash_list_sort"
harness = false

[[bench]]
name = "hash_list_hash"
harness = false

[[bench]]
name = "functional"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.6"
blake3 = "1.8.2"
clap = { version = "4.5.53", features = ["cargo", "unstable-styles"] }
memmap2 = "0.9.9"
rayon = "1.11"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
criterion = "0.8.1"

[features]
default = ["test-cleanup"]
test-cleanup = []
